--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ The index.html file is typically the landing page for a website on github pages 
 
 <head> <!-- The head is where the page begins, here we give important instructons on how to display content contained on the page. -->
     <link href="style.css" rel="stylesheet"> <!-- this links your HTML file to your style sheet, which gives instructions on how the page is displayed including; font, background, layout, favicon -->
-    <title> Welcome to my webpage </title> <!-- The title of your page will display in the tab. Fun fact the icon displayed in the tab is called a favicon. -->
+    <title> Welcome to Garfism </title> <!-- The title of your page will display in the tab. Fun fact the icon displayed in the tab is called a favicon. -->
 </head>
 <body> <!-- The body contains the majority of the content on the page, the bulk of your text, images, links, elements will all be located in here.-->
-    <h1>Welcome to my webpage</h1>
+    <h1>Welcome to Garfism</h1>
     
-    <img src="../assets/welcomebutterf.gif" width="180" height="100">
+    <img src="assets/HEAVEN.png" width="180" height="180">
 
     <h2>WYSIWYG vs Hand coding</h2> <!-- <h1/2/3/4> stands for heading 1, 2, 3, or 4.  -->
 
