--- a/test.html
+++ b/test.html
@@ -1,5 +1,4 @@
 <html>
     <header> GARFISM </header>
-    <body> the fastest growing religion </body>
-    <div> <img src="assets/HEAVEN.png" alt=""></div>
+    <body> the fastest growing religion please do not fact check us please </body>
 </html>
