--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@ The index.html file is typically the landing page for a website on github pages 
 </head>
 <body> <!-- The body contains the majority of the content on the page, the bulk of your text, images, links, elements will all be located in here.-->
     <h1>Welcome to Garfism</h1>
+    <span> hyperlink</span>
+    <a href="test.html">
+        <span> the fastest growing religion </span>
+    </a>
     
     <img src="assets/HEAVEN.png" width="1000" height="1000" >
 
