--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@ The index.html file is typically the landing page for a website on github pages 
     <link href="style.css" rel="stylesheet"> <!-- this links your HTML file to your style sheet, which gives instructions on how the page is displayed including; font, background, layout, favicon -->
     <title> Welcome to Garfism </title> <!-- The title of your page will display in the tab. Fun fact the icon displayed in the tab is called a favicon. -->
 </head>
+
 <body> <!-- The body contains the majority of the content on the page, the bulk of your text, images, links, elements will all be located in here.-->
     <h1>Welcome to Garfism</h1>
    <h2>
     <a href="test.html">
         <span> the fastest growing religion </span>
     </a> </h2>
-    <img src="assets/HEAVEN.png" width="1000" height="1000" >
+    <img src="assets/HEAVEN.png" width="auto" height="auto" 
+    alt="Garfield, a fat orange plush cat, glows faintly and waits for you in the heavens, his mouth in an open smile." 
+    >
 
     <p> <!-- <p> stands for paragraph, this indicates a block of text in a small text size. This is a block type element -->
-        Website builders like squarespace, wix, and cargo can be identified as <span class="newacronym">What You See Is What You Get (WYSIWYG)</span>. <!-- <span> indicates a reference to a style attribute or id. This is an inline type element.--> 
-        This describes any building program with a graphical interface and tools like drag/drop that let you visually place element as they would be displayed to the end user - microsoft word is another example.<br> <!-- <br> signals the end of a line, text after this will begin on a new line.-->
-        Hand coding a webpage using <span class="newacronym">HyperText Markup Language (HTML)</span> and 
-        <span class="newacronym">Cascading Style Sheets (CSS)</span> is a manual process of development, which allows nearly-complete customisation of the enire page.<br>
+        HIS RETURN IS IMMINENT
     </p>
 
     <div class="box1"> <!-- a div is a container which you can use to group together content. Divs are used to create layouts, separate information, contain different styles etc, it can be obvious, or invisible. This is a block type element.-->
