--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@ The index.html file is typically the landing page for a website on github pages 
     <a href="test.html">
         <span> the fastest growing religion </span>
     </a> </h2>
-    <img src="assets/HEAVEN.png" width="auto" height="auto" 
+    <img src="assets/HEAVEN.png" width="210" height="150" 
     alt="Garfield, a fat orange plush cat, glows faintly and waits for you in the heavens, his mouth in an open smile." 
     >
 
     <p> <!-- <p> stands for paragraph, this indicates a block of text in a small text size. This is a block type element -->
         HIS RETURN IS IMMINENT
     </p>
+    <img src="assets/window1.PNG" width="834" height="1112" >
 
     <div class="box1"> <!-- a div is a container which you can use to group together content. Divs are used to create layouts, separate information, contain different styles etc, it can be obvious, or invisible. This is a block type element.-->
         <div class="box1">
