--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ The index.html file is typically the landing page for a website on github pages 
 
     <p> <!-- <p> stands for paragraph, this indicates a block of text in a small text size. This is a block type element -->
         HIS RETURN IS IMMINENT
+        <br>
+        <br>
+        BE NOT AFRAID
     </p>
     <img src="assets/window1.PNG" width="834" height="1112" >
 
