--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html> <!-- This announces to the machine that the file is written in HTML
-The index.html file is typically the landing page for a website on github pages (the platform we are going to use to host our websites), which then links to other pages (E.G aboutme.html or surfing.html). If you type your github URL into the browser the index.html page will display by default -->
+<!DOCTYPE html> 
 
-<!-- this is a comment, its not displayed on the page but you can use it to leave notes for youself/inquisitive visitors.-->
-
-<head> <!-- The head is where the page begins, here we give important instructons on how to display content contained on the page. -->
-    <link href="style.css" rel="stylesheet"> <!-- this links your HTML file to your style sheet, which gives instructions on how the page is displayed including; font, background, layout, favicon -->
-    <title> Welcome to Garfism </title> <!-- The title of your page will display in the tab. Fun fact the icon displayed in the tab is called a favicon. -->
+<head> <!-- . -->
+    <link href="style.css" rel="stylesheet"> 
+    <title> Welcome to Garfism </title> 
 </head>
 
-<body> <!-- The body contains the majority of the content on the page, the bulk of your text, images, links, elements will all be located in here.-->
+<body> <!-- .-->
     <h1>Welcome to Garfism</h1>
    <h2>
     <a href="test.html">
@@ -18,7 +15,7 @@ The index.html file is typically the landing page for a website on github pages 
     alt="Garfield, a fat orange plush cat, glows faintly and waits for you in the heavens, his mouth in an open smile." 
     >
 
-    <p> <!-- <p> stands for paragraph, this indicates a block of text in a small text size. This is a block type element -->
+    <p> <!--  -->
         HIS RETURN IS IMMINENT
         <br>
         <br>
@@ -26,13 +23,13 @@ The index.html file is typically the landing page for a website on github pages 
     </p>
     <img src="assets/window1.PNG" width="834" height="1112" >
 
-    <div class="box1"> <!-- a div is a container which you can use to group together content. Divs are used to create layouts, separate information, contain different styles etc, it can be obvious, or invisible. This is a block type element.-->
+    <div class="box1"> 
         <div class="box1">
             <a href="https://{userid}.github.io/{reponame}" target="_blank">/\ web ring link \/</a>
         </div>
     </div>
 
 </body>
-<footer> <!-- The footer is a the end of the page, it's totally optional and typically contains a note about the last update, or a dis on your sworn enemy.-->
+<footer> 
     <p>Made with love by [your name here] &lt;3 </p>
 </footer>
