--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     >
 
     <p> <!--  -->
-        HIS RETURN IS IMMINENT
-        <br>
+        His Return Is Imminent
         <br>
         BE NOT AFRAID
     </p>
