--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head> <!-- . -->
     <link href="style.css" rel="stylesheet"> 
     <title> Welcome to Garfism </title> 
+    <img src="assets/GARF.GIF">
 </head>
 
-<body> <!-- .-->
+<body> <!-- Dear Garf what have i done-->
     <h1>Welcome to Garfism</h1>
    <h2>
     <a href="test.html">
@@ -16,6 +17,10 @@
     >
 
     <p> <!--  -->
+       <a href="Gallery.html">
+        <span>The Lord is my Garf, I shall not hunger,</span>
+       </a>
+        <br>
         His Return Is Imminent
         <br>
         BE NOT AFRAID
@@ -30,5 +35,5 @@
 
 </body>
 <footer> 
-    <p>Made with love by [your name here] &lt;3 </p>
+    <p>  join us today !!!</p>
 </footer>
