--- a/Gallery.html
+++ b/Gallery.html
@@ -9,7 +9,10 @@
 
 <body> 
    <img src="assets/LasagneofFlesh.PNG" alt="" width="1112" height="834"> 
-
+<br>
+   <img src="assets/GarfieldsWrath.PNG" width="1112" height="843" >
+<br>
+   <img src="assets/FalseProphet(jon).PNG" width="1112" height="843" >
 </body>
 <footer> 
     <p>  join us today !!!</p>
