--- a/Gallery.html
+++ b/Gallery.html
@@ -5,14 +5,24 @@
     <title> SCRIPTURE </title> 
     <h1> Scripture </h1>
     <h2>The Lord is my Garf, I shall not hunger,</h2>
+    <img src="assets/WINDOW.GIF" >
 </head>
 
 <body> 
-   <img src="assets/LasagneofFlesh.PNG" alt="" width="1112" height="834"> 
+   <figure>
+    <img src="assets/LasagneofFlesh.PNG" alt="" width="1112" height="834">
+    <figcaption>Lasagne of Flesh</figcaption> 
+</figure>
 <br>
+<figure>
    <img src="assets/GarfieldsWrath.PNG" width="1112" height="843" >
+   <figcaption>Garfields Wrath</figcaption>
+   </figure>
 <br>
+<figure>
    <img src="assets/FalseProphet(jon).PNG" width="1112" height="843" >
+   <figcaption>False Prophet (Jon) </figcaption>
+</figure>
 </body>
 <footer> 
     <p>  join us today !!!</p>
