--- a/Gallery.html
+++ b/Gallery.html
@@ -11,17 +11,17 @@
 <body> 
    <figure>
     <img src="assets/LasagneofFlesh.PNG" alt="" width="1112" height="834">
-    <figcaption>Lasagne of Flesh</figcaption> 
+    <figcaption>Lasagne of Flesh. Salvator Rosa, 1646.</figcaption> 
 </figure>
 <br>
 <figure>
    <img src="assets/GarfieldsWrath.PNG" width="1112" height="843" >
-   <figcaption>Garfields Wrath</figcaption>
+   <figcaption>Garfields Wrath. Francisco Goya, 1798.</figcaption>
    </figure>
 <br>
 <figure>
    <img src="assets/FalseProphet(jon).PNG" width="1112" height="843" >
-   <figcaption>False Prophet (Jon) </figcaption>
+   <figcaption>False Prophet (Jon). Salvator Rosa, 1646. </figcaption>
 </figure>
 </body>
 <footer> 
