--- a/index.html
+++ b/index.html
@@ -36,4 +36,5 @@
 </body>
 <footer> 
     <p>  join us today !!!</p>
+    <img src="assets/garfield10.gif" alt="" height="122.5" width="87">
 </footer>
