--- a/test.html
+++ b/test.html
@@ -1,4 +1,10 @@
 <html>
-    <header> GARFISM </header>
-    <body> the fastest growing religion please do not fact check us please </body>
+    <header> GARFISM 
+        <link href="style.css" rel="stylesheet"> 
+    </header>
+    <body> 
+        <br>
+        <div class="tooltip">The fastest growing religion on the net!
+            <span class="tooltiptext">fact checking us is a sin!</span>
+          </div>    </body>
 </html>
