--- a/test.html
+++ b/test.html
@@ -1,10 +1,16 @@
 <html>
     <header> GARFISM 
         <link href="style.css" rel="stylesheet"> 
+        <img src="assets/loungegarf.gif" alt="" >
+
     </header>
     <body> 
+       
         <br>
         <div class="tooltip">The fastest growing religion on the net!
             <span class="tooltiptext">fact checking us is a sin!</span>
-          </div>    </body>
+          </div> 
+          <br>
+          <img src="assets/do_you.gif" alt=""> 
+         </body>
 </html>
