--- a/index.html
+++ b/index.html
@@ -7,30 +7,33 @@
 </head>
 
 <body> <!-- Dear Garf what have i done-->
-    <h1>Welcome to Garfism</h1>
-   <h2>
-    <a href="test.html">
-        <span> the fastest growing religion </span>
-    </a> </h2>
-    <img src="assets/HEAVEN.png" width="210" height="150" 
-    alt="Garfield, a fat orange plush cat, glows faintly and waits for you in the heavens, his mouth in an open smile." 
-    >
+    <div class="body-wrapper">
+        <h1>Welcome to Garfism</h1>
+        <h2>
+            <a href="test.html">
+                <span> the fastest growing religion </span>
+            </a> </h2>
+            <img src="assets/HEAVEN.png" width="210" height="150" 
+            alt="Garfield, a fat orange plush cat, glows faintly and waits for you in the heavens, his mouth in an open smile." 
+            >
 
-    <p> <!--  -->
-       <a href="Gallery.html">
-        <span>The Lord is my Garf, I shall not hunger,</span>
-       </a>
-        <br>
-        His Return Is Imminent
-        <br>
-        BE NOT AFRAID
-    </p>
-    <img src="assets/window1.PNG" width="834" height="1112" >
+            <p> <!--  -->
+            <a href="Gallery.html">
+                <span>The Lord is my Garf, I shall not hunger,</span>
+            </a>
+                <br>
+                His Return Is Imminent
+                <br>
+                BE NOT AFRAID
+                <br>
+                <div id="Church"></div>
+            </p>
+        
+            <p>
+                <a href="falseprophets.html">
+                    <span> Beware False Prophets </span>
+            </p>
 
-    <div class="box1"> 
-        <div class="box1">
-            <a href="https://{userid}.github.io/{reponame}" target="_blank">/\ web ring link \/</a>
-        </div>
     </div>
 
 </body>
