--- a/test.html
+++ b/test.html
@@ -11,6 +11,10 @@
             <span class="tooltiptext">fact checking us is a sin!</span>
           </div> 
           <br>
+          <br>
           <img src="assets/do_you.gif" alt=""> 
+         <h2><a href="index.html">
+            <span> return </span></h2> 
+        </a>
          </body>
 </html>
