--- a/test.html
+++ b/test.html
@@ -1,20 +1,22 @@
 <html>
-    <header> GARFISM 
+    <head>  
         <link href="style.css" rel="stylesheet"> 
+    </head>
+    <header>
+        <h3>Garfism</h3>
         <img src="assets/loungegarf.gif" alt="" >
-
     </header>
-    <body> 
-       
-        <br>
-        <div class="tooltip">The fastest growing religion on the net!
+    <body>   
+     <br>
+     <div class="tooltip">The fastest growing religion on the net!
             <span class="tooltiptext">fact checking us is a sin!</span>
-          </div> 
-          <br>
-          <br>
-          <img src="assets/do_you.gif" alt=""> 
-         <h2><a href="index.html">
-            <span> return </span></h2> 
-        </a>
-         </body>
+     </div> 
+     <br>
+     <br>
+     <img src="assets/do_you.gif" alt=""> 
+     <h2>
+         <a href="index.html">
+         <span> return </span>
+     </h2> 
+    </body>
 </html>
