--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
 
 <body> <!-- Dear Garf what have i done-->
     <div class="body-wrapper">
-        <h1>Welcome to Garfism</h1>
-        <h2>
-            <a href="test.html">
-                <span> the fastest growing religion </span>
-            </a> </h2>
-            <img src="assets/HEAVEN.png" width="210" height="150" 
-            alt="Garfield, a fat orange plush cat, glows faintly and waits for you in the heavens, his mouth in an open smile." 
-            >
-
-            <p> <!--  -->
-            <a href="Gallery.html">
-                <span>The Lord is my Garf, I shall not hunger,</span>
-            </a>
-                <br>
+     <h1>Welcome to Garfism</h1>
+     <h2>
+         <a href="test.html">
+             <span> the fastest growing religion </span>
+         </a>
+     </h2>
+         <img src="assets/HEAVEN.png" width="210" height="150" 
+            alt="Garfield, a fat orange plush cat, glows faintly and waits for you in the heavens, his mouth in an open smile." >
+         <p> <!--  -->
+             <a href="Gallery.html">
+                 <span>The Lord is my Garf, I shall not hunger,</span>
+             </a>
+             <br>
                 His Return Is Imminent
-                <br>
+             <br>
                 BE NOT AFRAID
-                <br>
+             <br>
                 <div id="Church"></div>
             </p>
         
             <p>
                 <a href="falseprophets.html">
                     <span> Beware False Prophets </span>
+                </a>
             </p>
 
     </div>
