--- a/Gallery.html
+++ b/Gallery.html
@@ -3,11 +3,12 @@
 <head> <!-- . -->
     <link href="style.css" rel="stylesheet"> 
     <title> SCRIPTURE </title> 
-    <h1> Scripture </h1>
+</head>
+<header>
+     <h1> Scripture </h1>
     <h2>The Lord is my Garf, I shall not hunger,</h2>
     <img src="assets/WINDOW.GIF" >
-</head>
-
+</header>
 <body> 
  <figure>
      <img src="assets/LasagneofFlesh.PNG" alt="" width="1112" height="834">
@@ -25,6 +26,12 @@
  </figure>
 </body>
 
+<body>
+    <figure>
+        <img src="assets/Rhyton.jpg">
+        <figcaption>Garfield Rhyton. Attic period, 420-400 BCE </figcaption>
+    </figure>
+</body>
 <footer> 
     <p>  join us today !!!</p>
 </footer>
