--- a/Gallery.html
+++ b/Gallery.html
@@ -6,9 +6,14 @@
 </head>
 <header>
      <h1> Scripture </h1>
-    <h2>The Lord is my Garf, I shall not hunger,</h2>
+    <h2>
+      <a href="index.html" >
+         <span>Lord is my Garf, I shall not hunger,</span>
+      </a>
+    </h2>
     <img src="assets/WINDOW.GIF" >
 </header>
+
 <body> 
  <figure>
      <img src="assets/LasagneofFlesh.PNG" alt="" width="1112" height="834">
