--- a/falseprophets.html
+++ b/falseprophets.html
@@ -3,7 +3,11 @@
 <head> <!-- . -->
     <link href="style.css" rel="stylesheet"> 
 </head>
-
+<div>
+    <img src="assets/candlespin.gif" alt="" width="320" height="240">
+    <img src="assets/falseprophes.GIF" alt="">
+    <img src="assets/candlespin.gif" alt="" width="320" height="240">
+</div>
 <body> 
    <img src="assets/ruandmichelle.png" alt="">
 </body>
