--- a/scripture.html
+++ b/scripture.html
@@ -1,3 +1,7 @@
 <!DOCTYPE html>
 <head> <link rel="stylesheet" href="style2.css"></head>
-<header> <img src="assets/garfieldghent.PNG" > </header>
+<header> 
+    <img src="assets/ghentgarfield.jpg" > 
+    <h1>Scripture</h1>
+    <h3>the word of garf</h3>
+</header>
