--- a/scripture.html
+++ b/scripture.html
@@ -3,5 +3,10 @@
 <header> 
     <img src="assets/ghentgarfield.jpg" > 
     <h1>Scripture</h1>
-    <h3>the word of garf</h3>
 </header>
+
+<div class="scripture-row">
+ <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
+ <h3>the word of garf</h3> 
+ <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
+</div>
