--- a/falseprophets.html
+++ b/falseprophets.html
@@ -8,8 +8,10 @@
     <img src="assets/falseprophes.GIF" alt="">
     <img src="assets/candlespin.gif" alt="" width="320" height="240">
 </div>
-<body> 
+<body>    
+    <h2> RUPAUL ANDRE CHARLES </h2>
    <img src="assets/ruandmichelle.png" alt="">
+   
 </body>
 <footer> 
     <p>  join us today !!!</p>
