some more. stuff

--- a/Gallery.html
+++ b/Gallery.html
@@ -2,13 +2,13 @@
 
 <head> <!-- . -->
     <link href="style.css" rel="stylesheet"> 
-    <title> SCRIPTURE </title> 
+    <title> Gallery </title> 
 </head>
 <header>
-     <h1> Scripture </h1>
+     <h1> Gallery </h1>
     <h2>
       <a href="index.html" >
-         <span>Lord is my Garf, I shall not hunger,</span>
+         <span>The Lord is my Garf, I shall not hunger,</span>
       </a>
     </h2>
     <img src="assets/WINDOW.GIF" >
