--- a/falseprophets.html
+++ b/falseprophets.html
@@ -10,8 +10,11 @@
 </div>
 <body>    
     <h2> RUPAUL ANDRE CHARLES </h2>
-   <img src="assets/ruandmichelle.png" alt="">
-   
+    <figure>
+        <img src="assets/ruandmichelle.png" alt="">
+        <figcaption>Mother RuPaul and baby Michelle</figcaption>
+    </figure>
+   BEWARE OF DIVA  WORSHIP AND THE WORSHIP OF FALSE IDOLS
 </body>
 <footer> 
     <p>  join us today !!!</p>
