--- a/Gallery.html
+++ b/Gallery.html
@@ -15,6 +15,8 @@
 </header>
 
 <body> 
+    <h2>Digital Restorations</h2>
+    <p> throughout history Followers of Jon have targeted images of our lord, we have tried restoring these works based on remaining fragments</p>
  <figure>
      <img src="assets/LasagneofFlesh.PNG" alt="" width="1112" height="834">
      <figcaption>Lasagne of Flesh. Salvator Rosa, 1646.</figcaption> 
@@ -31,7 +33,8 @@
  </figure>
 </body>
 
-<body>
+<body> 
+ <h2> Artifacts and Relics</h2>
     <figure>
         <img src="assets/Rhyton.jpg">
         <figcaption>Garfield Rhyton. Attic period, 420-400 BCE </figcaption>
