--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
              <span> the fastest growing religion </span>
          </a>
      </h2>
-     <p> <a href="scripture.html">
-        <span> Are you willing ?</span>
-     </a>
-    </p>
+     <p> 
+          <a href="scripture.html">
+             <span> Are you willing ?</span>
+         </a>
+     </p>
          <img src="assets/HEAVEN.png" width="210" height="150" 
             alt="Garfield, a fat orange plush cat, glows faintly and waits for you in the heavens, his mouth in an open smile." >
          <p> <!--  -->
