--- a/Gallery.html
+++ b/Gallery.html
@@ -15,7 +15,11 @@
 </header>
 
 <body> 
-    <h3>Digital Restorations</h3>
+    <div class="candle-text">
+        <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
+        <h3>Digital Restorations</h3>
+        <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
+       </div> 
     <p> throughout history Followers of Jon have targeted images of our lord, we have tried restoring these works based on remaining fragments</p>
  <figure>
      <img src="assets/LasagneofFlesh.PNG" alt="" width="1112" height="834">
