--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html> 
 
 <head> <!-- . -->
-    <link href="style.css" rel="stylesheet"> 
-    <title> Welcome to Garfism </title> 
-    <img src="assets/GARF.GIF">
+ <link href="style.css" rel="stylesheet"> 
+ <title> Welcome to Garfism </title> 
+ <img src="assets/GARF.GIF">
 </head>
 
 <body> <!-- Dear Garf what have i done-->
@@ -15,34 +15,32 @@
          </a>
      </h2>
      <p> 
-          <a href="scripture.html">
+         <a href="scripture.html">
              <span> Are you willing ?</span>
          </a>
      </p>
-         <img src="assets/HEAVEN.png" width="210" height="150" 
-            alt="Garfield, a fat orange plush cat, glows faintly and waits for you in the heavens, his mouth in an open smile." >
-         <p> <!--  -->
-             <a href="Gallery.html">
-                 <span>The Lord is my Garf, I shall not hunger,</span>
-             </a>
-             <br>
-                His Return Is Imminent
-             <br>
-                BE NOT AFRAID
-             <br>
-                <div id="Church"></div>
-            </p>
-        
-            <p>
-                <a href="falseprophets.html">
-                    <span> Beware False Prophets </span>
-                </a>
-            </p>
+     <img src="assets/HEAVEN.png" width="210" height="150" alt="Garfield, a fat orange plush cat, glows faintly and waits for you in the heavens, his mouth in an open smile." >
+     <p>
+         <a href="Gallery.html">
+             <span>The Lord is my Garf, I shall not hunger,</span>
+         </a>
+         <br>
+         His Return Is Imminent
+         <br>
+         BE NOT AFRAID
+         <br>
+         <div id="Church"></div>
+     </p>
+     <p>
+         <a href="falseprophets.html">
+              <span> Beware False Prophets </span>
+         </a>
+     </p>
 
     </div>
 
 </body>
 <footer> 
-    <p>  join us today !!!</p>
-    <img src="assets/garfield10.gif" alt="" height="122.5" width="87">
+ <p>  join us today !!!</p>
+ <img src="assets/garfield10.gif" alt="" height="122.5" width="87">
 </footer>
