--- a/Gallery.html
+++ b/Gallery.html
@@ -4,17 +4,17 @@
     <link href="style.css" rel="stylesheet"> 
     <title> Gallery </title> 
 </head>
-<header>
+
+<body> 
+    <header>
      <h1> Gallery </h1>
-    <h2>
+     <h2>
       <a href="index.html" >
          <span>The Lord is my Garf, I shall not hunger,</span>
       </a>
-    </h2>
-    <img src="assets/WINDOW.GIF" >
-</header>
-
-<body> 
+     </h2>
+     <img src="assets/WINDOW.GIF" >
+    </header>
     <div class="candle-text">
         <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
         <h3>Digital Restorations</h3>
@@ -38,12 +38,19 @@
 </body>
 
 <body> 
- <h3> Artifacts and Relics</h3>
+    <div class="candle-text">
+        <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
+        <h3> Artifacts and Relics</h3>
+        <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
+       </div> 
+
     <figure>
-        <img src="assets/Rhyton.jpg">
+        <img src="assets/Rhyton.jpg" width="1112" height="1112">
         <figcaption>Garfield Rhyton. Attic period, 420-400 BCE </figcaption>
     </figure>
 </body>
 <footer> 
-    <p>  join us today !!!</p>
+    <a href="join.html">
+     <span>  join us today !!!</span>
+    </a>
 </footer>
