--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
     </div>
 
 </body>
-<footer> 
- <p>  join us today !!!</p>
- <img src="assets/garfield10.gif" alt="" height="122.5" width="87">
+
+<footer>     
+    <img src="assets/garfield10.gif" alt="" height="122.5" width="87">
+    <a href="join.html">
+     <span>  join us today !!!</span>
+    </a> 
+
 </footer>
