--- a/falseprophets.html
+++ b/falseprophets.html
@@ -3,19 +3,21 @@
 <head> <!-- . -->
     <link href="style.css" rel="stylesheet"> 
 </head>
-<div>
+<body>  
+ <div>
     <img src="assets/candlespin.gif" alt="" width="320" height="240">
     <img src="assets/falseprophes.GIF" alt="">
     <img src="assets/candlespin.gif" alt="" width="320" height="240">
-</div>
-<body>    
-    <h2> RUPAUL ANDRE CHARLES </h2>
+ </div>
+    <h2> RUPAUL ANDRE CHARLES</h2>
     <figure>
-        <img src="assets/ruandmichelle.png" alt="">
+        <img src="assets/ruandmichelle.png" alt="" style="border: 20px ridge rgb(255, 163, 3)";>
         <figcaption>Mother RuPaul and baby Michelle</figcaption>
     </figure>
    BEWARE OF DIVA  WORSHIP AND THE WORSHIP OF FALSE IDOLS
 </body>
 <footer> 
-    <p>  join us today !!!</p>
+    <a href="index.html">
+        <span> back </span>
+    </a>
 </footer>
