--- a/scripture.html
+++ b/scripture.html
@@ -10,3 +10,9 @@
  <h3>the word of garf</h3> 
  <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
 </div>
+
+<footer> 
+    <a href="index.html">
+        <span> scared? </span>
+    </a>
+</footer>
