--- a/join.html
+++ b/join.html
@@ -4,5 +4,21 @@
     <link href="style.css" rel="stylesheet"> 
 </head>
 <body>
-    
+    <div>
+     <h4> 
+     Do You Feel Lonely? Unsatisfied? Hungry?
+     <br>
+     We Can Fix That.
+     </h4>
+    </div>
+    <div>
+        <img src="assets/candlespin.gif" alt="" width="160" height="120">    
+        <img class="holy" src="assets/salvation.gif" width="187.5" height="250">
+        <img src="assets/candlespin.gif" alt="" width="160" height="120">
+    </div>
+    <div>
+        <h5> Join Us Today!!</h5>
+        becoming a member of Garfism is just as easy as microwave lasagne. 
+    </div>
+
 </body>
