--- a/Gallery.html
+++ b/Gallery.html
@@ -41,12 +41,20 @@
     <div class="candle-text">
         <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
         <h3> Artifacts and Relics</h3>
+     
         <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
        </div> 
-
+   <p> evidence of Garfields importance and worship throughout history.</p>
     <figure>
         <img src="assets/Rhyton.jpg" width="1112" height="1112">
-        <figcaption>Garfield Rhyton. Attic period, 420-400 BCE </figcaption>
+        <figcaption>Garfield Rhyton. Attic period, 420-400 BCE. </figcaption>
+    </figure>
+    <br>
+    <figure>
+        <img src="assets/hieroglyph1.jpg" width="1112" height="1112">
+        <br>
+        <img src="assets/hieroglyph2.jpg" width="1112" height="1112">
+        <figcaption> Garfield hieroglyph tablet. 1300-1200 BCE.</figcaption>
     </figure>
 </body>
 <footer> 
