--- a/scripture.html
+++ b/scripture.html
@@ -10,7 +10,9 @@
  <h3>the word of garf</h3> 
  <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
 </div>
-
+<body>
+    
+</body>
 <footer> 
     <a href="index.html">
         <span> scared? </span>
