--- a/join.html
+++ b/join.html
@@ -5,20 +5,39 @@
 </head>
 <body>
     <div>
-     <h4> 
+     <h4>
      Do You Feel Lonely? Unsatisfied? Hungry?
      <br>
      We Can Fix That.
      </h4>
     </div>
     <div>
-        <img src="assets/candlespin.gif" alt="" width="160" height="120">    
+        <img class="holycandle" src="assets/candlespin.gif" alt="" width="160" height="120">    
         <img class="holy" src="assets/salvation.gif" width="187.5" height="250">
-        <img src="assets/candlespin.gif" alt="" width="160" height="120">
+        <img class="holycandle" src="assets/candlespin.gif" alt="" width="160" height="120">
     </div>
     <div>
         <h5> Join Us Today!!</h5>
-        becoming a member of Garfism is just as easy as microwave lasagne. 
+        becoming a member of Garfism is just as easy as microwave lasagne. all you have to do is follow these simple steps.
+        <br>
+        Step 1.
+        <br>
+        find as many images or representations of our lord as possible.
+        <br>
+        <br>
+        Step 2. 
+        <br>
+        dedicate yourself through prayer. offer your soul for salvation.
+        <br>
+        <br>
+        Step 3.
+        <br>
+        spread the word, share his image. 
     </div>
 
 </body>
+<footer> 
+    <a href="index.html">
+        <span> back </span>
+    </a>
+</footer>
