--- a/Gallery.html
+++ b/Gallery.html
@@ -22,17 +22,17 @@
        </div> 
     <p> throughout history Followers of Jon have targeted images of our lord, we have tried restoring these works based on remaining fragments</p>
  <figure>
-     <img src="assets/LasagneofFlesh.PNG" alt="" width="1112" height="834">
+     <img class="holy" src="assets/LasagneofFlesh.PNG" alt="" width="1112" height="834">
      <figcaption>Lasagne of Flesh. Salvator Rosa, 1646.</figcaption> 
    </figure>
  <br>
  <figure>
-     <img src="assets/GarfieldsWrath.PNG" width="1112" height="843" >
+     <img class="holy" src="assets/GarfieldsWrath.PNG" width="1112" height="843" >
      <figcaption>Garfields Wrath. Francisco Goya, 1798.</figcaption>
    </figure>
 <br>
  <figure>
-     <img src="assets/FalseProphet(jon).PNG" width="1112" height="843" >
+     <img class="holy" src="assets/FalseProphet(jon).PNG" width="1112" height="843" >
      <figcaption>False Prophet (Jon). Salvator Rosa, 1646. </figcaption>
  </figure>
 </body>
@@ -46,14 +46,14 @@
        </div> 
    <p> evidence of Garfields importance and worship throughout history.</p>
     <figure>
-        <img src="assets/Rhyton.jpg" width="1112" height="1112">
+        <img class="holy" src="assets/Rhyton.jpg" width="1112" height="1112">
         <figcaption>Garfield Rhyton. Attic period, 420-400 BCE. </figcaption>
     </figure>
     <br>
     <figure>
-        <img src="assets/hieroglyph1.jpg" width="1112" height="1112">
+        <img class="holy" src="assets/hieroglyph1.jpg" width="1112" height="1112">
         <br>
-        <img src="assets/hieroglyph2.jpg" width="1112" height="1112">
+        <img class="holy" src="assets/hieroglyph2.jpg" width="1112" height="1112">
         <figcaption> Garfield hieroglyph tablet. 1300-1200 BCE.</figcaption>
     </figure>
 </body>
