--- a/falseprophets.html
+++ b/falseprophets.html
@@ -11,10 +11,17 @@
  </div>
     <h2> RUPAUL ANDRE CHARLES</h2>
     <figure>
-        <img src="assets/ruandmichelle.png" alt="" style="border: 20px ridge rgb(255, 163, 3)";>
+        <img class="holycandle" src="assets/ruandmichelle.png" alt="" style="border: 20px ridge rgb(255, 163, 3)";>
         <figcaption>Mother RuPaul and baby Michelle</figcaption>
     </figure>
-   BEWARE OF DIVA  WORSHIP AND THE WORSHIP OF FALSE IDOLS
+   BEWARE OF DIVA  WORSHIP AND THE WORSHIP OF FALSE IDOLS.
+   <br>
+    RUPAUL ANDRE CHARLES, OTHERWISE KNOWN AS ROOPLE, BROOM, THE THIRD PAUL BROTHER.
+    <br>
+    SO CALLED MOTHER WHO FRACKS THE EARTH FOR WEALTH, AN AFFRONT TO GARF.
+
+    <h2> SWORN NEMESIS JON ARBUCKLE </h2>
+
 </body>
 <footer> 
     <a href="index.html">
