--- a/scripture.html
+++ b/scripture.html
@@ -11,7 +11,7 @@
  <img style="vertical-align: middle;" src="assets/candlespin.gif" width="128" height="96"> 
 </div>
 <body>
-    
+    <img src="assets/altarthing.gif" alt="">
 </body>
 <footer> 
     <a href="index.html">
