--- a/Gallery.html
+++ b/Gallery.html
@@ -56,6 +56,11 @@
         <img class="holy" src="assets/hieroglyph2.jpg" width="1112" height="1112">
         <figcaption> Garfield hieroglyph tablet. 1300-1200 BCE.</figcaption>
     </figure>
+    <br>
+    <figure>
+        <img class="holy" src="assets/pagangarf.PNG" alt="" width="1112" height="843">
+        <figcaption> Altar for pagan deity resembling Garfield. 3000-2000 BCE. </figcaption>
+    </figure>
 </body>
 <footer> 
     <a href="join.html">
