--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
      </div> 
      <br>
      <br>
-     <img src="assets/do_you.gif" alt=""> 
+     <a href="join.html"><img src="assets/do_you.gif" alt=""> </a>
      <h2>
          <a href="index.html">
          <span> return </span>
