--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
              <span> Are you willing ?</span>
          </a>
      </p>
-     <img src="assets/HEAVEN.png" width="210" height="150" alt="Garfield, a fat orange plush cat, glows faintly and waits for you in the heavens, his mouth in an open smile." >
+     <img src="assets/welcome.gif" >
      <p>
          <a href="Gallery.html">
              <span>The Lord is my Garf, I shall not hunger,</span>
